# GraphRAG-Hub

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  LICENSE  README.md  available_graphs_example.yaml  docker-compose.yml  pyproject.toml
Graph-RAG-MCP/: README.md
scripts/: compose-up.sh  mcp-docker-run.ps1  mcp-docker-run.sh
src/graph_rag/: __init__.py  agent_workflow.py  ast_enrichment.py  cli.py  config_ui.py  docstrings.py  embedding_indexer.py  env.py  llm.py  metadata.py  models.py  neo4j_loader.py  parser.py  paths.py  query_decomposition.py  retriever.py
src/graph_rag/mcp/: __init__.py  schemas.py  server.py  tools.py
src/graphrag_mcp/: __init__.py
src/graphrag_mcp/application/dto/: health_check.py  ingest.py  list_graphs.py  rebuild_embeddings.py  retrieve_candidates.py  retrieve_details.py
src/graphrag_mcp/application/ports/: embedding_provider.py  graph_registry.py  graph_repository.py  health_probe.py  library_metadata_resolver.py  parser_port.py
src/graphrag_mcp/application/use_cases/: health_check.py  ingest_library.py  list_graphs.py  rebuild_embeddings.py  retrieve_candidates.py  retrieve_details.py
src/graphrag_mcp/bootstrap/: container.py
src/graphrag_mcp/domain/: exceptions.py
src/graphrag_mcp/domain/entities/: class_symbol.py  example_snippet.py  function_symbol.py  graph_edge.py  graph_node.py  library.py  source_module.py
src/graphrag_mcp/domain/services/: context_compressor.py  graph_identity_policy.py  scoring_policy.py
src/graphrag_mcp/domain/value_objects/: graph_id.py  (+4 more)
src/graphrag_mcp/infrastructure/: health_probe.py  library_metadata.py
tests/: test_env.py
tests/mcp/: test_server.py  test_tools.py
tests/unit/: test_cli_menu.py  test_imports.py  test_ingest_handler.py  test_ingest_persistence_order.py  test_ingest_use_case.py  test_mock_providers.py  test_neo4j_schema_manager.py  test_parser_public_api.py  test_retrieve_candidates.py
(+31 files in other folders)
