[project]
name = "graph-rag"
version = "0.1.0"
description = "Pipeline utilities for building a Graph Knowledge Hub from source repositories."
readme = "ARCHITECTURE.md"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.1.0",
  "langchain-ollama",
  "langchain-openai",
  "langchain-anthropic",
  "langchain-google-genai",
  "langgraph",
  "pydantic>=2.0",
  "pyyaml",
]

[project.optional-dependencies]
neo4j = [
  "neo4j>=5.20,<6",
]
cli = [
  "rich>=13.0",
  "questionary>=2.0",
  "python-dotenv>=1.0",
]
all = [
  "neo4j>=5.20,<6",
  "rich>=13.0",
  "questionary>=2.0",
  "python-dotenv>=1.0",
  "tqdm>=4.0",
  "langchain>=0.1.0",
  "langchain-ollama",
  "langchain-openai",
  "langchain-anthropic",
  "langchain-google-genai",
  "langgraph",
  "pydantic>=2.0",
  "pyyaml",
]
mcp = [
  "mcp>=1.0",
  "httpx>=0.27",
]

[project.scripts]
graph-rag = "graph_rag.cli:main"
graph-rag-mcp = "graph_rag.mcp.server:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
