[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-mcp"
version = "0.1.0"
description = "MCP-first Graph RAG service focused on public API evidence."
requires-python = ">=3.11"
dependencies = [
  "mcp>=1,<2",
  "neo4j>=5,<6",
  "prompt-toolkit>=3,<4",
]

[project.optional-dependencies]
dev = [
  "pytest-mock>=3,<4",
]

[project.scripts]
graph-rag-mcp = "graphrag_mcp.interfaces.mcp.server:main_sync"
graph-rag-cli = "graphrag_mcp.interfaces.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
